reorganized code a bit, fixed bug in finding shortest path to line ALG

--- a/RomeoAndJuliet/Project1/Project1.vcxproj
+++ b/RomeoAndJuliet/Project1/Project1.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="ShortestPathTree.h" />
     <ClInclude Include="SNode.h" />
     <ClInclude Include="SPTnode.h" />
+    <ClInclude Include="storage.h" />
     <ClInclude Include="tangent.h" />
     <ClInclude Include="TNODE.h" />
     <ClInclude Include="Tree.h" />
