--- a/RomeoAndJuliet/Project1/Project1.vcxproj.filters
+++ b/RomeoAndJuliet/Project1/Project1.vcxproj.filters
@@ -80,5 +80,8 @@
     <ClInclude Include="LOS.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="storage.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
