fixed bug in finding shortest path for type1 events but.... found that the ordering was wrong when we iterate from the back

--- a/RomeoAndJuliet/Project1/Project1.vcxproj
+++ b/RomeoAndJuliet/Project1/Project1.vcxproj
@@ -146,6 +146,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="min_computation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Chain.h" />
