--- a/RomeoAndJuliet/Project1/Project1.vcxproj
+++ b/RomeoAndJuliet/Project1/Project1.vcxproj
@@ -103,13 +103,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>NDEBUG;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\SpocktheWizard\Desktop\Romeo-Juliet\RomeoAndJuliet\Project1\include;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.16299.0\ucrt\sys;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Spock_the_Wizard\RomeoJuliet\RomeoAndJuliet\Project1\include;C:\Users\SpocktheWizard\Desktop\Romeo-Juliet\RomeoAndJuliet\Project1\include;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.16299.0\ucrt\sys;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>C:\Users\SpocktheWizard\Desktop\Romeo-Juliet\RomeoAndJuliet\Project1\lib\x64;C:\Users\Spock the Wizard\Desktop\Romeo-Juliet\RomeoAndJuliet\Project1\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freetype.lib;freeglut.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Spock_the_Wizard\RomeoJuliet\RomeoAndJuliet\Project1\lib\x64;C:\Users\Spock_the_Wizard\RomeoJuliet\RomeoAndJuliet\Project1\lib;C:\Users\SpocktheWizard\Desktop\Romeo-Juliet\RomeoAndJuliet\Project1\lib\x64;C:\Users\Spock the Wizard\Desktop\Romeo-Juliet\RomeoAndJuliet\Project1\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freeglut.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
